<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu0"
            android:icon="@drawable/logo"
            android:title="@string/menu0" />
        <item
            android:id="@+id/menu1"
            android:icon="@drawable/ic_house_energy"
            android:title="@string/menu1" />
        <item
            android:id="@+id/menu2"
            android:icon="@drawable/ic_electric_tower"
            android:title="@string/menu2" />
        <item
            android:id="@+id/menu3"
            android:icon="@drawable/ic_solar_energy"
            android:title="@string/menu3" />
        <item
            android:id="@+id/menu4"
            android:icon="@drawable/ic_air_conditioning"
            android:title="@string/menu4" />
        <item
            android:id="@+id/menu5"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu5" />
    </group>

</menu>
